--- a/index.html
+++ b/index.html
@@ -5,19 +5,71 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>القنوات المسموح بها</title>
   <style>
-    body{font-family:Arial,Helvetica,sans-serif;direction:rtl;text-align:center;padding:16px;background:#f0f2f5}
-    .card{background:#fff;padding:12px;margin:14px 0;border-radius:8px;box-shadow:0 2px 6px rgba(0,0,0,0.06)}
-    iframe{width:100%;height:480px;border-radius:6px;border:0}
+    body {
+      font-family: 'Tahoma', sans-serif;
+      direction: rtl;
+      text-align: center;
+      background: #0f172a;
+      color: #f8fafc;
+      margin: 0;
+      padding: 20px;
+    }
+    h1 {
+      font-size: 24px;
+      margin-bottom: 20px;
+    }
+    #search {
+      width: 90%;
+      max-width: 400px;
+      padding: 10px;
+      margin-bottom: 20px;
+      border-radius: 6px;
+      border: none;
+      font-size: 16px;
+      outline: none;
+    }
+    #videos {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+      gap: 20px;
+      justify-content: center;
+      align-items: start;
+    }
+    .card {
+      background: #1e293b;
+      border-radius: 12px;
+      padding: 12px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+      transition: transform 0.3s;
+    }
+    .card:hover { transform: scale(1.02); }
+    iframe {
+      width: 100%;
+      height: 220px;
+      border-radius: 8px;
+      border: none;
+    }
+    h3 {
+      font-size: 16px;
+      color: #e2e8f0;
+      margin-bottom: 10px;
+    }
+    .loading {
+      font-size: 18px;
+      margin-top: 20px;
+      color: #94a3b8;
+    }
   </style>
 </head>
 <body>
   <h1>📺 القنوات المسموح بها فقط</h1>
-  <div id="videos">جاري تحميل الفيديوهات...</div>
+  <input type="text" id="search" placeholder="🔍 ابحث عن فيديو..." oninput="filterVideos()" />
+  <div id="videos" class="loading">⏳ جاري تحميل الفيديوهات...</div>
 
 <script>
-const API_KEY = "AIzaSyDFqz7ug9Dr2r6o8_LB6cbIxJjtZnHV10c"; // ← حط مفتاحك هنا
+const API_KEY = "AIzaSyDFqz7ug9Dr2r6o8_LB6cbIxJjtZnHV10c";
 
-// معرفات القنوات (Channel IDs)
+// ✅ معرفات القنوات (Channel IDs)
 const CHANNEL_IDS = [
   "UCN6hQCg6tIs5x6CoYLwXlhQ", // Gohary
   "UCMmiGP6imlrwLP3oy34wbxA", // GehadAshraf-zq7gh
@@ -31,21 +83,43 @@ const CHANNEL_IDS = [
   "UCSvnSxC5f1W8ogXMC38IbzA"  // drtahasalah
 ];
 
+let allVideos = [];
+
 async function fetchVideos() {
-  const all = [];
-  for (const id of CHANNEL_IDS) {
-    const res = await fetch(`https://www.googleapis.com/youtube/v3/search?part=snippet&channelId=${id}&order=date&type=video&maxResults=5&key=${API_KEY}`);
-    const data = await res.json();
-    if (data.items) all.push(...data.items);
+  document.getElementById("videos").innerHTML = "⏳ جاري تحميل الفيديوهات...";
+  try {
+    const all = [];
+    for (const id of CHANNEL_IDS) {
+      const res = await fetch(`https://www.googleapis.com/youtube/v3/search?part=snippet&channelId=${id}&order=date&type=video&maxResults=10&key=${API_KEY}`);
+      const data = await res.json();
+      if (data.items) all.push(...data.items);
+    }
+    allVideos = all;
+    renderVideos(all);
+  } catch (err) {
+    document.getElementById("videos").innerHTML = "❌ حدث خطأ أثناء تحميل الفيديوهات.";
   }
-  const videos = all.map(v => `
+}
+
+function renderVideos(videos) {
+  if (!videos.length) {
+    document.getElementById("videos").innerHTML = "⚠️ لم يتم العثور على فيديوهات.";
+    return;
+  }
+  document.getElementById("videos").innerHTML = videos.map(v => `
     <div class="card">
       <h3>${v.snippet.title}</h3>
       <iframe src="https://www.youtube-nocookie.com/embed/${v.id.videoId}?rel=0" allowfullscreen></iframe>
     </div>
   `).join('');
-  document.getElementById("videos").innerHTML = videos || "❌ لم يتم العثور على فيديوهات، تحقق من المفتاح أو القنوات.";
 }
+
+function filterVideos() {
+  const term = document.getElementById("search").value.toLowerCase();
+  const filtered = allVideos.filter(v => v.snippet.title.toLowerCase().includes(term));
+  renderVideos(filtered);
+}
+
 fetchVideos();
 </script>
 </body>
