--- a/index.html
+++ b/index.html
@@ -3,73 +3,49 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>قناة KhaliDasEC0</title>
+  <title>القنوات المسموح بها</title>
   <style>
-    body {
-      font-family: Arial, Helvetica, sans-serif;
-      direction: rtl;
-      text-align: center;
-      padding: 16px;
-      background: #f0f2f5;
-    }
-    .card {
-      background: #fff;
-      padding: 12px;
-      margin: 14px 0;
-      border-radius: 8px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.06);
-    }
-    iframe {
-      width: 100%;
-      height: 480px;
-      border-radius: 6px;
-      border: 0;
-    }
-    h3 { margin: 8px 0; font-size: 16px; }
-    #videos.loading { color: #555; font-size: 18px; }
+    body{font-family:Arial,Helvetica,sans-serif;direction:rtl;text-align:center;padding:16px;background:#f0f2f5}
+    .card{background:#fff;padding:12px;margin:14px 0;border-radius:8px;box-shadow:0 2px 6px rgba(0,0,0,0.06)}
+    iframe{width:100%;height:480px;border-radius:6px;border:0}
   </style>
 </head>
 <body>
-  <h1>📺 قناة KhaliDasEC0</h1>
-  <div id="videos" class="loading">⏳ جاري تحميل الفيديوهات...</div>
+  <h1>📺 القنوات المسموح بها فقط</h1>
+  <div id="videos">جاري تحميل الفيديوهات...</div>
 
 <script>
-const API_KEY = "AIzaSyA_b_Pqa_iSTVUIsoEQG_sCw8S90CcvuXA";
-const CHANNEL_ID = "UC1FECopYxeTtlWMgDBYQNlg";
+const API_KEY = "AIzaSyA_b_Pqa_iSTVUIsoEQG_sCw8S90CcvuXA"; // ← حط مفتاحك هنا
+
+// معرفات القنوات (Channel IDs)
+const CHANNEL_IDS = [
+  "UC9PVx1K8t1sQvUuK8jGcFgg", // Gohary
+  "UCMEWktdYH0RvxY0g3_9rZHw", // GehadAshraf-zq7gh
+  "UCjgn5h4tZDp6oZBG3d5VxzA", // mohamedsalah.bassthalk
+  "UCjBo3P0aSSqgTvR9mtqAK1A", // Abu-Elela
+  "UCf1dTR2vFT7EpP7N9b0bSog", // khaledsakr8181
+  "UCvRQYlA3ZjY3N9mF0e2eO0Q", // doctor.physics
+  "UCV6dxAlNU1igFyxgGoE9vXw", // MoreEnglish88
+  "UCMPB0eRdykYlQlG8p4jH7wA", // alisayed2010
+  "UC7ujlZWvOBnUeAcYkWS6LKg", // EnglishFull88
+  "UCv6h7zjUu1L8uM7uwVn6q7Q"  // drtahasalah
+];
 
 async function fetchVideos() {
-  const container = document.getElementById("videos");
-  container.classList.add("loading");
-  container.innerHTML = "⏳ جاري تحميل الفيديوهات...";
-  
-  try {
-    const res = await fetch(`https://www.googleapis.com/youtube/v3/search?part=snippet&channelId=${CHANNEL_ID}&order=date&type=video&maxResults=5&key=${API_KEY}`);
+  const all = [];
+  for (const id of CHANNEL_IDS) {
+    const res = await fetch(`https://www.googleapis.com/youtube/v3/search?part=snippet&channelId=${id}&order=date&type=video&maxResults=5&key=${API_KEY}`);
     const data = await res.json();
-
-    if (!data.items || data.items.length === 0) {
-      container.innerHTML = "⚠️ لم يتم العثور على فيديوهات، تحقق من القناة أو المفتاح.";
-      return;
-    }
-
-    const html = data.items
-      .filter(v => v.id && v.id.videoId)
-      .map(v => `
-        <div class="card">
-          <h3>${v.snippet.title}</h3>
-          <iframe src="https://www.youtube-nocookie.com/embed/${v.id.videoId}?rel=0" allowfullscreen></iframe>
-        </div>
-      `)
-      .join('');
-
-    container.classList.remove("loading");
-    container.innerHTML = html;
-
-  } catch(err) {
-    container.innerHTML = "❌ حدث خطأ أثناء تحميل الفيديوهات.";
-    console.error(err);
+    if (data.items) all.push(...data.items);
   }
+  const videos = all.map(v => `
+    <div class="card">
+      <h3>${v.snippet.title}</h3>
+      <iframe src="https://www.youtube-nocookie.com/embed/${v.id.videoId}?rel=0" allowfullscreen></iframe>
+    </div>
+  `).join('');
+  document.getElementById("videos").innerHTML = videos || "❌ لم يتم العثور على فيديوهات، تحقق من المفتاح أو القنوات.";
 }
-
 fetchVideos();
 </script>
 </body>
